# DaVinciCoin

./: .cproject  .gitattributes  .project  Makefile.am  README.md  configure.ac
compilated/: davincicoin-cli
contrib/debian/examples/: davincicoin.conf
db/: autocompact_test.cc
doc/: README_windows.txt
share/: setup.nsi.in
src/: Makefile.am  RCa06288  addrman.h  alert.h  allocators.h  base58.h  bignum.h  bloom.h  checkpoints.cpp  checkpoints.h  checkpointsync.cpp  checkpointsync.h  clientversion.h  compat.h  davincicoin-cli.cpp  davincicoin-res.rc  davincicoind.cpp  db.h  dnsresolver.cpp  dnsresolver.h  dnssolver.h  hash.h  init.cpp  init.h  kernel.cpp  kernel.h  kernelrecord.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  mruset.h  net.cpp  net.h  netbase.h  protocol.cpp  protocol.h  (+30 more)
src/qt/: bitcoin.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.h  bitcoingui.h  bitcoinunits.h  guiutil.cpp  paymentserver.cpp
src/test/data/TestNet Data/: Account_premined.txt  davincicoin.conf
